Filter section added

--- a/public/index.html
+++ b/public/index.html
@@ -42,13 +42,34 @@
                 <img src="./images/img 3.png" loading="lazy"  alt="speakers">
                 <img src="./images/img 4.png" loading="lazy"  alt="laptop"> 
             </div></div>
-            <div class="logos-slider"> Hi here will be logos animation</div>
+
+            <div class="logos-slider" > 
+            <div class="item"style="--position: 1;"  ><img src="images/1.png" alt=""  ></div>
+            <div class="item"style="--position: 2;"  ><img src="images/2.png" alt=""></div>
+            <div class="item"style="--position: 3;" ><img src="images/3.png" alt="" ></div>
+            <div class="item"style="--position: 4;" ><img src="images/4.png" alt="" ></div>
+            <div class="item"style="--position: 5;" ><img src="images/4.png" alt="" ></div>
+            <div class="item"style="--position: 6;" ><img src="images/4.png" alt="" ></div>
+            <div class="item"style="--position: 7;" ><img src="images/4.png" alt="" ></div>
+            <div class="item"style="--position: 8;" ><img src="images/4.png" alt="" ></div>
+            <div class="item"style="--position: 9;" ><img src="images/4.png" alt="" ></div>
+            <div class="item"style="--position: 10;" ><img src="images/4.png" alt="" ></div>
+        
+            </div>
     </section>
   <main>
-    <h2>Latest products</h2>
-    <h3>categories</h3>
-    <h3>Filter</h3>
+    <div class=" Personalized-Feature ">
+        <button class="open-filter">Show Filter</button>
+        <button>Sort By  <select name="SortFeature" id="Sort"></select></button>
+    </div>
     <hr>
+  
+
+    <div class="filter-container hidden" id="filterBox">
+        <span class="close-btn">X</span>
+        <h2>Filter Options</h2>
+        <!-- Add your filter options here -->
+    </div>
     <div class="products">
         <div class="card">
             <div class="product-img"></div>
