products are rendered

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -137,24 +137,13 @@
     </div>
        </div>
     </div>
-    <div class="products">
-        <div class="card">
-            <div class="product-img"></div>
-            <div class="product-info">
-                <h3>Product Name</h3>
-                <h3>Price</h3>
-            </div>
-            <p>lorem12</p>
-         <div class="buy">
-            <div class="rating">&#9734;&#9734;&#9734;&#9734;&#9734;</div>
-            <button>Buy Now</button>
-         </div>   
+    <div class="products"> 
         </div>
     </div>
   </main>
 
   <footer>
-    &copy; Made with love by Sunehra. All rights reserved.
+    &copy; Made with love by Sunehra.
   </footer>
   <script src="frontend.js"></script>
 </body>
