Add Logo Animation

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,19 +45,23 @@
                 <img src="./images/img 4.png" loading="lazy"  alt="laptop"> 
             </div></div>
 
-            <!-- <div class="logos-slider" > 
-            <div class="item"style="--position: 1;"  ><img src="images/1.png" alt=""  ></div>
-            <div class="item"style="--position: 2;"  ><img src="images/2.png" alt=""></div>
-            <div class="item"style="--position: 3;" ><img src="images/3.png" alt="" ></div>
-            <div class="item"style="--position: 4;" ><img src="images/4.png" alt="" ></div>
-            <div class="item"style="--position: 5;" ><img src="images/4.png" alt="" ></div>
-            <div class="item"style="--position: 6;" ><img src="images/4.png" alt="" ></div>
-            <div class="item"style="--position: 7;" ><img src="images/4.png" alt="" ></div>
-            <div class="item"style="--position: 8;" ><img src="images/4.png" alt="" ></div>
-            <div class="item"style="--position: 9;" ><img src="images/4.png" alt="" ></div>
-            <div class="item"style="--position: 10;" ><img src="images/4.png" alt="" ></div> -->
-        
+            <div class="logos-slider" > 
+            <div class="slide">
+            <div class="item" style="--position: 1;"  ><img src="images/1.png" alt=""  ></div>
+            <div class="item" style="--position: 2;"  ><img src="images/1.png" alt=""></div>
+            <div class="item" style="--position: 3;" ><img src="images/1.png" alt="" ></div>
+            <div class="item" style="--position: 4;" ><img src="images/1.png" alt="" ></div>
+            <div class="item" style="--position: 5;" ><img src="images/1.png" alt="" ></div>
+            <div class="item" style="--position: 6;" ><img src="images/4.png" alt="" ></div>
+            <div class="item" style="--position: 7;" ><img src="images/1.png" alt="" ></div>
+            <div class="item" style="--position: 8;" ><img src="images/1.png" alt="" ></div>
+            <div class="item" style="--position: 9;" ><img src="images/1.png" alt="" ></div>
+            <div class="item" style="--position: 10;" ><img src="images/1.png" alt="" ></div> 
+            <div class="item" style="--position: 11;" ><img src="images/1.png" alt="" ></div> 
+            <div class="item" style="--position: 12;" ><img src="images/1.png" alt="" ></div> 
+        </div>
             </div>
+
     </section>
 
   <main>
