logos images added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -48,17 +48,17 @@
             <div class="logos-slider" > 
             <div class="slide">
             <div class="item" style="--position: 1;"  ><img src="images/1.png" alt=""  ></div>
-            <div class="item" style="--position: 2;"  ><img src="images/1.png" alt=""></div>
-            <div class="item" style="--position: 3;" ><img src="images/1.png" alt="" ></div>
-            <div class="item" style="--position: 4;" ><img src="images/1.png" alt="" ></div>
-            <div class="item" style="--position: 5;" ><img src="images/1.png" alt="" ></div>
-            <div class="item" style="--position: 6;" ><img src="images/4.png" alt="" ></div>
-            <div class="item" style="--position: 7;" ><img src="images/1.png" alt="" ></div>
-            <div class="item" style="--position: 8;" ><img src="images/1.png" alt="" ></div>
-            <div class="item" style="--position: 9;" ><img src="images/1.png" alt="" ></div>
-            <div class="item" style="--position: 10;" ><img src="images/1.png" alt="" ></div> 
-            <div class="item" style="--position: 11;" ><img src="images/1.png" alt="" ></div> 
-            <div class="item" style="--position: 12;" ><img src="images/1.png" alt="" ></div> 
+            <div class="item" style="--position: 2;"  ><img src="images/hp logo.png  " alt=""></div>
+            <div class="item" style="--position: 3;" ><img src="images/3.png" alt="" ></div>
+            <div class="item" style="--position: 4; width: 200px;" ><img src="images/2.png" alt="" ></div>
+            <div class="item" style="--position: 5;" ><img src="images/4.png" alt="" ></div>
+            <div class="item" style="--position: 6; width: 200px"><img src="images/1.png" alt="" ></div>
+            <div class="item" style="--position: 7;" ><img src="images/hp logo.png" alt="" ></div>
+            <div class="item" style="--position: 8;" ><img src="images/samsung logo.png" alt="" ></div>
+            <div class="item" style="--position: 9;" ><img src="images/3.png" alt="" ></div>
+            <div class="item" style="--position: 10;" ><img src="images/4.png" alt="" ></div> 
+            <div class="item" style="--position: 11;" ><img src="images/hp logo.png  " alt="" ></div> 
+            <div class="item" style="--position: 12;" ><img src="images/2.png" alt="" ></div> 
         </div>
             </div>
 
@@ -100,9 +100,6 @@
         <h3>Category </h3>
         <label>
             <input type="checkbox" name="category" value="Laptops"> Laptops
-        </label>
-        <label>
-            <input type="checkbox" name="category" value="smartphones"> Smartphones
         </label>
         <label>
             <input type="checkbox" name="category" value="Tablets"> Tablets
