Show Product details on new page

--- a/frontend/product.html
+++ b/frontend/product.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href= "product.css">
 </head>
 <body>
-    
+  <div class="container">
+    <div class="leftcontent"><img src="images/keyboard 1.png" alt=""></div>
+    <div class="rightContent">
+      <h1>Product Name</h1>
+      <h3>Product description Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint corporis, debitis fuga, porro temporibus eum tempora saepe laborum sapiente animi soluta odio sed.</h3>
+      <h2>Product Price</h2>
+      <div class="buy">
+        <div class="button"><button>+</button></div>
+        <div class="cart"><button>Add to Cart</button></div>
+      </div>
+    </div>
+  </div>
+  <script src="product.js"></script>
 </body>
-</html>
+</html>              
