--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,32 +27,26 @@
         <img src="./images/profile.png" alt="profile" id="profile">
      </div>
     </header>
-
+<hr>
     <section>
         <div class="left-content">
-            <!-- <h1> Power Up Your Life with the Best Tech.</h1> -->
              <h1>Future-Ready Tech, Just a Click Away.</h1>
             <p>Stay ahead of the curve with the latest gadgets and innovative tech solutions. Whether you're upgrading your workspace, enhancing your gaming setup, or looking for smart devices to simplify life, we’ve got you covered.</p>
         </div>
         <div class="right-content">
-            <div class="ball-animation">
-           </div> 
-           <div class="line"></div>
             <div class="Slider">
-                <img src="./images/keyboard 1.png" loading="lazy" alt="keyboard">
-                <img src="./images/keyboard 2.png" loading="lazy"  alt="keyboard">
-                <img src="./images/img 3.png" loading="lazy"  alt="speakers">
-                <img src="./images/img 4.png" loading="lazy"  alt="laptop"> 
-            </div></div>
+                <img src="./images/keyboard 1.png" loading="lazy" alt="keyboard"  class="animated-img  .rotate-vert-right" >
+            </div>
+        </div>
 
             <div class="logos-slider" > 
             <div class="slide">
-            <div class="item" style="--position: 1;"  ><img src="images/1.png" alt=""  ></div>
+            <div class="item" style="--position: 1;"  ><img src="images/1.png" alt=""></div>
             <div class="item" style="--position: 2;"  ><img src="images/hp logo.png  " alt=""></div>
             <div class="item" style="--position: 3;" ><img src="images/3.png" alt="" ></div>
-            <div class="item" style="--position: 4; width: 200px;" ><img src="images/2.png" alt="" ></div>
+            <div class="item" style="--position: 4;" ><img src="images/2.png" alt="" ></div>
             <div class="item" style="--position: 5;" ><img src="images/4.png" alt="" ></div>
-            <div class="item" style="--position: 6; width: 200px"><img src="images/1.png" alt="" ></div>
+            <div class="item" style="--position: 6;"><img src="images/1.png" alt="" ></div>
             <div class="item" style="--position: 7;" ><img src="images/hp logo.png" alt="" ></div>
             <div class="item" style="--position: 8;" ><img src="images/samsung logo.png" alt="" ></div>
             <div class="item" style="--position: 9;" ><img src="images/3.png" alt="" ></div>
