Zoom Effect Fixed

--- a/frontend/product.html
+++ b/frontend/product.html
@@ -8,13 +8,14 @@
 </head>
 <body>
   <div class="container">
-    <div class="leftcontent"><img src="images/keyboard 1.png" alt=""></div>
+    <div class="leftcontent"><img src=" " alt="product-image"></div>
     <div class="rightContent">
+      <h4>Category</h4>
       <h1>Product Name</h1>
-      <h3>Product description Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint corporis, debitis fuga, porro temporibus eum tempora saepe laborum sapiente animi soluta odio sed.</h3>
+      <p>Product description Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint corporis, debitis fuga, porro temporibus eum tempora saepe laborum sapiente animi soluta odio sed.</p>
       <h2>Product Price</h2>
       <div class="buy">
-        <div class="button"><button>+</button></div>
+        <div class="button"><button>-</button><button>0</button> <button>+</button></div>
         <div class="cart"><button>Add to Cart</button></div>
       </div>
     </div>
